# upnp3

./: .gitignore  CMakeLists.txt  README.md  a.txt  main1.cpp  net.cpp  net.h  root.xml  upnp3.code-workspace  upnplog.txt
web/: root.xml
web/ContentDirectory/: event.xml
